// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MoneyText /> returns default format money 1`] = `
<div>
  <span>
    US$1.00
  </span>
</div>
`;

exports[`<MoneyText /> returns formatted money 1`] = `
<div>
  <span>
    1,00 $CA
  </span>
</div>
`;
